--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -24,7 +24,9 @@
 }
 
 #container {
-    height: 100%;
     display: flex;
     flex-direction: column;
+    height: 100%;
+    max-width: 1800px;
+    margin: auto;
 }
