--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -2,14 +2,16 @@
 
 :host {
     z-index: 60;
+    max-width: inherit;
 }
 
 #header {
     position: fixed;
     display: flex;
     align-items: center;
-    width: 95%;
-    padding: 1vh 1.5vw;
+    width: 100%;
+    max-width: inherit;
+    padding: 1vh 0;
 
     #brand-logo {
         height: 130px;
