--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,7 +29,11 @@ a:hover {
 
 p {
     font-size: 1.1rem;
-    line-height: 1.5rem;
+    line-height: 1.8rem;
+    
+    @media (max-width: 768px) {
+        line-height: 1.5rem;
+    }
 }
 
 ul {
@@ -83,18 +87,30 @@ h3 {
 }
 
 .content-container {
+    display: flex;
     position: relative;
-    padding: 20vh 6vw 6vh;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
     z-index: 20;
+
+    @media (max-width: 768px) {
+        height: auto;
+        padding: 20vh 6vw 6vh;
+    }
 }
 
 .main-section {
-    margin-bottom: 8vh;
+    margin-bottom: 6vh;
+
+    @media (max-width: 768px) {
+        margin-bottom: 8vh;
+    }
 }
     
 .sub-section {
     position: relative;
-    margin-bottom: 6vh;
+    margin-bottom: 5vh;
 
     h1::after {
         content: "";
@@ -105,7 +121,16 @@ h3 {
     }
 
     &:last-child {
+        margin-bottom: 0;
         padding-bottom: 0;
+
+        @media (max-width: 768px) {
+            margin-bottom: 6vh;
+        }
+    }
+
+    @media (max-width: 768px) {
+        margin-bottom: 6vh;
     }
 }
 
