feat(particles): updated particles config

--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -1,5 +1,6 @@
 ///// Colors /////
-$background: #1e2425;
+// $background: #1e2425;
+$background: #202020;
 $background-secondary: #000000;
 
 $background-translucent: #0e1114f5;
