--- a/src/app/shared/components/game-emulator/game-emulator.component.scss
+++ b/src/app/shared/components/game-emulator/game-emulator.component.scss
@@ -16,7 +16,7 @@
     width: 40%;
     margin: auto;
     text-align: center;
-    font-family: $primary-font;
+    font-family: $body-font;
     font-size: 1.2rem;
     text-transform: uppercase;
     color: $primary-100;
