--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -24,4 +24,5 @@ $neutral-100-translucent: #dadada05;
 $neutral-600-transulcent: #5b5b5b91;
 
 ///// Fonts /////
-$primary-font: Exo2;
+$title-font: 'Major Mono Display', monospace;
+$body-font: 'Anonymous Pro', monospace;
