--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@ body {
     width: 100%;
     margin: 0;
     padding: 0;
-    font-family: $primary-font;
+    font-family: $body-font;
     font-size: 0.9rem;
     color: $neutral-100 !important;
     -webkit-user-select: none;
@@ -53,7 +53,7 @@ h1 {
     display: flex;
     flex-direction: row;
     margin: 0;
-    // font-family: $primary-font;
+    // font-family: $body-font;
     font-size: 1.3rem;
     font-weight: 500;
     text-transform: uppercase;
@@ -64,7 +64,7 @@ h1 {
 
 h3 {
     margin: 0;
-    font-family: $primary-font;
+    font-family: $body-font;
     text-transform: uppercase;
 }
 
@@ -75,7 +75,7 @@ h3 {
 
 .title {
     padding-left: 2px;
-    // font-family: $primary-font;
+    // font-family: $body-font;
     font-size: 1.8rem;
     letter-spacing: -2px;
     color: $primary-600;
