--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -12,12 +12,8 @@
             margin-bottom: 2vh;
             font-family: $title-font;
             font-size: 4rem;
+            font-weight: bold;
             text-shadow: $primary-100 0 0 3px;
-            
-            @media (max-width: 768px) {
-                font-size: 3.5rem;
-                line-height: 3.8rem;
-            }
         }
 
         #roles {
@@ -27,10 +23,6 @@
             font-family: 'Tomorrow', sans-serif;
             font-size: 2rem;
             color: $primary-300;
-    
-            @media (max-width: 768px) {
-                font-size: 2rem;
-            }
         }
 
         #description {
@@ -38,13 +30,6 @@
             padding-top: 1.3em;
             border-top: 1px solid $primary-600-translucent;
             font-size: 1.3rem;
-        }
-    
-        @media (max-width: 768px) {
-            display: block;
-            width: 100%;
-            height: 46vh;
-            margin-top: 12vh;
         }
     }
 }
