--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,5 +1,5 @@
-<div class="content-container">
-    <div ngsReveal class="main-section">
+<div ngsReveal class="content-container">
+    <div class="main-section">
         <div class="title">Experience</div>
         <p [innerText]="experienceIntro"></p>
     </div>
@@ -58,8 +58,9 @@
         </ng-container>
 
         <!-- TABLET & DESKTOP -->
-        <div ngsReveal *appIfScreenSize="[ 'medium', 'large']" id="jobs-md-lg">
+        <div *appIfScreenSize="[ 'medium', 'large']" id="jobs-md-lg">
             <div id="companies">
+                <span></span>
                 <div *ngFor="let company of companies" class="company"
                     [ngClass]="{'selected-company': selectedCompany == company}" (click)="selectedCompany = company">
                     <img src="{{ company.iconPath }}" class="icon">
