--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -11,6 +11,7 @@ $primary-400: #95bba2;
 $primary-600: #6a948d;
 $primary-900: #161817;
 
+$primary-100-translucent: #b1e2dae3;
 $primary-600-translucent: #6a948d4d;
 $primary-900-translucent: #0f100ff0;
 
@@ -25,4 +26,4 @@ $neutral-600-transulcent: #5b5b5b91;
 
 ///// Fonts /////
 $title-font: 'Major Mono Display', monospace;
-$body-font: 'Anonymous Pro', monospace;
+$body-font: 'Play', sans-serif;
